testing/framework/resources/Advanced/Failing/mondrian/query6094.q
select agg_tenant.tenant_id as c0, agg_tenant.unit_sales as m0 from agg_tenant as agg_tenant;
